serve json pronto

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
 
         <div class="row justify-content-center">
-            <div id="default" class="default cna-box-svg m-2 p-3 col text-center d-none" value="2">
+            <div id="default" class="default cna-box-svg m-2 p-3 col text-center" value="2">
                 <a class="d-flex mb- text-center" href="#" data-toggle="modal" data-target="#exampleModal">
                     <svg class="svg-tag">
-                        <use href="icon-library.svg#icon-panel"></use>
+                        <use href="icon-library.svg#icon-checked"></use>
                     </svg>
                 </a>
                 <span class="icon-name">Panel</span></a>
